@@ -4,3 +4,26 @@ exports[`VTL syntax highlighting highlights syntax for basic/hello-world.vm 1`] 
 "<span class=\\"hljs-title function_\\">#set</span>( <span class=\\"hljs-variable\\">$name</span> <span class=\\"hljs-operator\\">=</span> <span class=\\"hljs-string\\">&quot;Velocity&quot;</span> <span class=\\"hljs-punctuation\\">)</span>
 Hello <span class=\\"hljs-variable\\">$name</span> World<span class=\\"hljs-operator\\">!</span>"
 `;
+
+exports[`VTL syntax highlighting highlights syntax for basic/string-interp.vm 1`] = `
+"<span class=\\"hljs-title function_\\">#set</span>( <span class=\\"hljs-variable\\">$size</span> <span class=\\"hljs-operator\\">=</span> <span class=\\"hljs-string\\">&quot;Big&quot;</span> <span class=\\"hljs-punctuation\\">)</span>
+<span class=\\"hljs-title function_\\">#set</span>( <span class=\\"hljs-variable\\">$name</span> <span class=\\"hljs-operator\\">=</span> <span class=\\"hljs-string\\">&quot;Ben&quot;</span> <span class=\\"hljs-punctuation\\">)</span>
+
+The clock is <span class=\\"hljs-variable\\">$size</span><span class=\\"hljs-variable\\">$name</span><span class=\\"hljs-punctuation\\">.</span>
+
+
+<span class=\\"hljs-title function_\\">#set</span>( <span class=\\"hljs-variable\\">$size</span> <span class=\\"hljs-operator\\">=</span> <span class=\\"hljs-string\\">&quot;Big&quot;</span> <span class=\\"hljs-punctuation\\">)</span>
+<span class=\\"hljs-title function_\\">#set</span>( <span class=\\"hljs-variable\\">$name</span> <span class=\\"hljs-operator\\">=</span> <span class=\\"hljs-string\\">&quot;Ben&quot;</span> <span class=\\"hljs-punctuation\\">)</span>
+
+<span class=\\"hljs-title function_\\">#set</span>(<span class=\\"hljs-variable\\">$clock</span> <span class=\\"hljs-operator\\">=</span> <span class=\\"hljs-string\\">&quot;<span class=\\"hljs-variable\\">$size</span><span class=\\"hljs-variable\\">$name</span>&quot;</span> <span class=\\"hljs-punctuation\\">)</span>
+
+The clock is <span class=\\"hljs-variable\\">$clock</span><span class=\\"hljs-punctuation\\">.</span>
+
+
+<span class=\\"hljs-title function_\\">#set</span>( <span class=\\"hljs-variable\\">$size</span> <span class=\\"hljs-operator\\">=</span> <span class=\\"hljs-string\\">&quot;Big&quot;</span> <span class=\\"hljs-punctuation\\">)</span>
+<span class=\\"hljs-title function_\\">#set</span>( <span class=\\"hljs-variable\\">$name</span> <span class=\\"hljs-operator\\">=</span> <span class=\\"hljs-string\\">&quot;Ben&quot;</span> <span class=\\"hljs-punctuation\\">)</span>
+
+<span class=\\"hljs-title function_\\">#set</span>(<span class=\\"hljs-variable\\">$clock</span> <span class=\\"hljs-operator\\">=</span> <span class=\\"hljs-string\\">&quot;<span class=\\"hljs-variable\\">$</span><span class=\\"hljs-punctuation\\">{</span>size<span class=\\"hljs-punctuation\\">}</span>Tall<span class=\\"hljs-variable\\">$name</span>&quot;</span> <span class=\\"hljs-punctuation\\">)</span>
+
+The clock is <span class=\\"hljs-variable\\">$clock</span><span class=\\"hljs-punctuation\\">.</span>"
+`;
