@@ -1,0 +1,20 @@
+#set( $size = "Big" )
+#set( $name = "Ben" )
+
+The clock is $size$name.
+
+
+#set( $size = "Big" )
+#set( $name = "Ben" )
+
+#set($clock = "$size$name" )
+
+The clock is $clock.
+
+
+#set( $size = "Big" )
+#set( $name = "Ben" )
+
+#set($clock = "${size}Tall$name" )
+
+The clock is $clock.
